Add product info endpoint
